Interfaces terminadas, falta funcionalidad BD